// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer Header Test should render component if its passed 1`] = `
.c1 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #E7F0FF;
}

.c1 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  padding: 1.9rem 2.4rem 2.2rem;
  position: relative;
}

.c2 {
  position: absolute;
  right: 1.6rem;
  top: 1.6rem;
  border-radius: 50%;
  background-color: #ffffff;
}

.c2,
.c2 > * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c2 * {
  fill: #13181D;
}

.c2:hover {
  background-color: #eff2f4;
  box-shadow: 0 2px 8px rgba(239,242,244,0.5);
}

.c2:hover * {
  fill: #13181D;
}

.c2:active {
  background-color: #eff2f4;
  box-shadow: none;
}

.c2:active * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
    id="medly-drawer-header"
  >
    <div>
      Render DIV
    </div>
    <svg
      class="c1 c2"
      fill="none"
      height="1em"
      id="medly-drawer-close-icon"
      variant="solid"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Drawer Header Test should render text if string is passed 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 2.4rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  line-height: 3.2rem;
  text-align: initial;
}

.c2 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #E7F0FF;
}

.c2 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  padding: 1.9rem 2.4rem 2.2rem;
  position: relative;
}

.c3 {
  position: absolute;
  right: 1.6rem;
  top: 1.6rem;
  border-radius: 50%;
  background-color: #ffffff;
}

.c3,
.c3 > * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3 * {
  fill: #13181D;
}

.c3:hover {
  background-color: #eff2f4;
  box-shadow: 0 2px 8px rgba(239,242,244,0.5);
}

.c3:hover * {
  fill: #13181D;
}

.c3:active {
  background-color: #eff2f4;
  box-shadow: none;
}

.c3:active * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
    id="medly-drawer-header"
  >
    <h3
      class="c1"
    >
      Demo Header
    </h3>
    <svg
      class="c2 c3"
      fill="none"
      height="1em"
      id="medly-drawer-close-icon"
      variant="solid"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;
